web-infras/parser/tests/fixtures/babel/es2022/class-static-block/invalid-legacy-octal/output.txt
[SyntaxError]: Octal literals are not allowed in strict mode (4,5)
4|    042;
 |   ^
